@@ -15,6 +15,7 @@ wan_gateway=0.0.0.0
 wan_primary_dns=208.67.222.222
 wan_secondary_dns=8.8.8.8
 wan_manual_mtu=0
+wan_static_dns=off
 lan_ipaddr=192.168.1.1
 lan_netmask=255.255.255.0
 wan_port=4
